2008-08-29  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_loginuid/pam_loginuid.c(set_loginuid): Uids
	are unsigned.

2008-08-18  Thorsten Kukuk  <kukuk@thkukuk.de>

	* Makefile.am (M4_FILES): Adjust list.

	* modules/pam_access/pam_access.8.xml: Fix module service
	vs. module type.
	* modules/pam_cracklib/pam_cracklib.8.xml: Likewise.
	* modules/pam_debug/pam_debug.8.xml: Likewise.
	* modules/pam_deny/pam_deny.8.xml: Likewise.
	* modules/pam_echo/pam_echo.8.xml: Likewise.
	* modules/pam_env/pam_env.8.xml: Likewise.
	* modules/pam_exec/pam_exec.8.xml: Likewise.
	* modules/pam_faildelay/pam_faildelay.8.xml: Likewise.
	* modules/pam_filter/pam_filter.8.xml: Likewise.
	* modules/pam_ftp/pam_ftp.8.xml: Likewise.
	* modules/pam_group/pam_group.8.xml: Likewise.
	* modules/pam_issue/pam_issue.8.xml: Likewise.
	* modules/pam_keyinit/pam_keyinit.8.xml: Likewise.
	* modules/pam_lastlog/pam_lastlog.8.xml: Likewise.
	* modules/pam_limits/pam_limits.8.xml: Likewise.
	* modules/pam_listfile/pam_listfile.8.xml: Likewise.
	* modules/pam_localuser/pam_localuser.8.xml: Likewise.
	* modules/pam_loginuid/pam_loginuid.8.xml: Likewise.
	* modules/pam_mail/pam_mail.8.xml: Likewise.
	* modules/pam_mkhomedir/pam_mkhomedir.8.xml: Likewise.
	* modules/pam_motd/pam_motd.8.xml: Likewise.
	* modules/pam_namespace/pam_namespace.8.xml: Likewise.
	* modules/pam_nologin/pam_nologin.8.xml: Likewise.
	* modules/pam_permit/pam_permit.8.xml: Likewise.
	* modules/pam_rhosts/pam_rhosts.8.xml: Likewise.
	* modules/pam_rootok/pam_rootok.8.xml: Likewise.
	* modules/pam_securetty/pam_securetty.8.xml: Likewise.
	* modules/pam_selinux/pam_selinux.8.xml: Likewise.
	* modules/pam_sepermit/pam_sepermit.8.xml: Likewise.
	* modules/pam_shells/pam_shells.8.xml: Likewise.
	* modules/pam_succeed_if/pam_succeed_if.8.xml: Likewise.
	* modules/pam_tally/pam_tally.8.xml: Likewise.
	* modules/pam_time/pam_time.8.xml: Likewise.
	* modules/pam_tty_audit/pam_tty_audit.8.xml: Likewise.