@@ -1,3 +1,9 @@
+2008-09-03  Thorsten Kukuk  <kukuk@thkukuk.de>
+
+	* modules/pam_exec/pam_exec.c: Expose authtok if requested,
+	provide environment variable containing service type.
+	* modules/pam_exec/pam_exec.8.xml: Document new option.
+
 2008-08-29  Tomas Mraz <t8m@centrum.cz>
 
 	* modules/pam_loginuid/pam_loginuid.c(set_loginuid): Uids
